tests/fixtures/valid/ignored/builtins/type.py
# Valid type() calls
# Auto-generated by scripts/generate_tests.py

b0_type_int = type(1)
b1_type_float = type(1.0)
b2_type_bool = type(True)
b3_type_str = type("hello")
b4_type_bytes = type(b"hello")
b5_type_list = type([1, 2, 3])
b6_type_dict = type({"a": 1})
b7_type_set = type({1, 2, 3})
b8_type_none = type(None)

print("type() tests passed!")
