tests/fixtures/invalid/pow_bytes_list_dict.py
# Cannot call pow() with Bytes, List[int], Dict[str, int]
x = pow(b"hello", [1, 2, 3], {"a": 1})
